Fix scrolling on Firefox

--- a/packages/admin/src/styles/_scroll.sass
+++ b/packages/admin/src/styles/_scroll.sass
@@ -10,3 +10,4 @@
   display: flex
   position: relative
   flex-flow: column
+  overflow: hidden
